--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -57,9 +58,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -80,15 +83,20 @@ button:focus-visible {
 
 .fudong {
   height: 100%;
+  width: 1px;
   position: absolute;
-  border: 1px solid #fff;
-  padding: 5px;
-  left: 200%
+  background-color: #fff;
+  /* padding: 5px; */
+  /* left: 200% */
+}
+
+.h-highlight {
+  background-color: blue;
 }
 
 .domWidget {
-	width: 200px;
-	background-color: antiquewhite;
+  width: 200px;
+  border-left: 1px solid #fff;
 }
 
 
@@ -97,9 +105,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
